# FileProcessor

./: .gitignore  CMakeLists.txt  README.md  run_main.sh  run_tests.sh
data/: malformed.json  missing_fields.json  sample.csv  sample.json
include/: CSVHandler.h  CSVHandlerFactory.h  FactoryUtils.h  FileHandler.h  FileHandlerFactory.h  JSONHandler.h  JSONHandlerFactory.h
src/: CSVHandler.cpp  FactoryUtils.cpp  JSONHandler.cpp  main.cpp
tests/: test_CSVHandler.cpp  test_FileHandlerFactory.cpp  test_JSONHandler.cpp
